fixed image spacing on wonka page

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -78,7 +78,7 @@ figcaption {
 #wonka figure img {
   float:left;
   margin-right:2rem;
-  max-width:45%;
+  max-width:40%;
 }
 footer {
   clear:both;
